workspace-sf/force-app/main/default/objects/Modalidade__c/Modalidade__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as modalidades</description>
    <label>Modalidade</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modalidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>