workspace-sf/force-app/main/default/objects/Modalidade__c/fields/CodigoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>CodigoEmpresa__c</fullName>
    <formula>Empresa__r.CodigoEmpresa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código da empresa</label>
    <type>Text</type>
</CustomField>