workspace-sf/force-app/main/default/objects/Modalidade__c/fields/CodigoRamoSeguro__c.field-meta.xml
<CustomField>
    <fullName>CodigoRamoSeguro__c</fullName>
    <formula>RamoSeguro__r.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do ramo de seguro</label>
    <type>Text</type>
</CustomField>