workspace-sf/force-app/main/default/objects/Modalidade__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Modalidades</relationshipLabel>
    <relationshipName>Modalidades</relationshipName>
    <type>Lookup</type>
</CustomField>