workspace-sf/force-app/main/default/objects/Modalidade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Empresa__c</columns>
    <columns>CodigoEmpresa__c</columns>
    <columns>RamoSeguro__c</columns>
    <columns>CodigoRamoSeguro__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodigoRamoSeguro__c</field>
        <operation>equals</operation>
        <value>1329</value>
    </filters>
    <label>Todas as modalidades</label>
</ListView>